# death

./: Readme.md  death.cabal  flake.nix
app/: Main.hs
src/: Death.hs
src/Death/: Applicative.hs  Functor.hs  Monad.hs
src/Death/Applicative/: Maybe.hs
src/Death/Functor/: Maybe.hs  Signature.hsig
src/Death/Monad/: Maybe.hs  Signature.hsig
src/app/: Death.hs
src/effects-app/Death/: BusinessLogic.hs
src/effects-io/Death/Effects/: Base.hs  FileSystem.hs  LineInOut.hs
src/effects-state/Death/Applicative/: Signature.hs
src/effects-state/Death/Effects/: FileSystem.hs  LineInOut.hs
src/effects-state/Death/Functor/: Signature.hs  State.hs
src/effects-state/Death/Monad/: Signature.hs
src/effects/Death/: Base.hs
src/effects/Death/Effects/: Base.hsig  FileSystem.hsig  LineInOut.hsig
src/impl/Death/Applicative/: IO.hs  List.hs
src/impl/Death/Base/: IO.hs
src/impl/Death/Effect/: FileSystem.hs  LineInOut.hs
src/impl/Death/Functor/: IO.hs  List.hs
src/impl/Death/Monad/: IO.hs  List.hs  Maybe.hs
src/sig/Death/: Base.hsig  BusinessLogic.hs  Functor.hs  Monad.hs
src/sig/Death/Applicative/: Signature.hsig
src/sig/Death/Effects/: FileSystem.hsig  LineInOut.hsig
src/sig/Death/Functor/: Signature.hsig
src/sig/Death/Monad/: Signature.hsig
test/: Test.hs
