cabal-version:      3.4

name:           death
version:        1.0.0
homepage:       https://github.com/jappeace/death#readme
bug-reports:    https://github.com/jappeace/death/issues
author:         Jappie Klooster
maintainer:     hi@jappie.me
copyright:      2025 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE

source-repository head
  type: git
  location: https://github.com/jappeace/death

common common-options
  default-extensions: 
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields
    -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"

  build-depends:
      base >=4.9.1.0 && <4.21.0

  default-language: Haskell2010

library
  import: common-options
  signatures:
      Death.Functor.Signature
      Death.Applicative.Signature
      Death.Monad.Signature
  exposed-modules:
      Death.Functor
      Death.Applicative
      Death.Monad
  other-modules:
      Paths_death
  hs-source-dirs:
      src/sig

library impl
  import: common-options
  exposed-modules:
      Death.Functor.Maybe
      Death.Applicative.Maybe
      Death.Monad.Maybe
  hs-source-dirs:
      src/impl

-- library is an exe pattern
library app
  import: common-options
  exposed-modules:
      Death
  hs-source-dirs:
      src/app
  mixins:
       death:impl (Death.Functor.Maybe as Death.Functor.Signature),
       death:impl (Death.Applicative.Maybe as Death.Applicative.Signature),
       death:impl (Death.Monad.Maybe as Death.Monad.Signature)
  build-depends:
      death:impl,
      death,
      base

executable exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      death:app
  ghc-options: -Wno-unused-packages

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wno-unused-packages
  other-modules:
      Paths_death
  hs-source-dirs:
      test
  build-depends:
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      death:app
